Thu Jan 26 23:48:47 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Hello/step-by-step.html
        
          Fixed a fuzz error about dependency on ~schmidt/ACE_wrappers.

Thu Jan 26 19:25:06 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/TargetManager/TargetManager.mpc
        
          Added an empty IDL_Files segment to the _exec project,
          which should clean up tons of Windows VC build erros
          and warnings.

Thu Jan 26 17:57:45 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/ExecutionManager/ExecutionManager.mpc
        * DAnCE/NodeManager/NodeManager.mpc
        
          Modified to inherit from a base project dance_extension_stub.mpb
          to avoid explicily included path specification.

Thu Jan 26 10:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO/DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
          Fixed incorrect doxygen tag

        * CIAO/DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl:
          Added missing ACE_INLINE macro's


Thu Jan 26 01:44:15 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/NodeApplicationManager/Containers_Info_Map.cpp
        * DAnCE/NodeApplicationManager/Containers_Info_Map.h
        * DAnCE/NodeApplicationManager/ImplementationInfo.cpp
        * DAnCE/NodeApplicationManager/ImplementationInfo.h
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/StaticConfigurator/StaticDAnCEParser.cpp
        * ciao/Deployment.idl

          Fixed a bug of shared component capability. Originally, we
          haven't differentiate between "shared components" and
          "external components", so when a component ref count becomes
          0, the "shared components" will become empty, however, since